[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/Assets/Century Gothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Data/Scenes/Main.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 512.0
margin_bottom = 256.0

[node name="Name" type="Label" parent="."]
margin_top = 16.0
margin_right = 512.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "AlaRRm"
align = 1

[node name="MTT" type="Button" parent="."]
margin_left = 144.0
margin_top = 32.0
margin_right = 368.0
margin_bottom = 88.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
flat = true

[node name="Counting" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TimeLeft" type="Label" parent="Counting"]
margin_top = 104.0
margin_right = 512.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_fonts/font = SubResource( 3 )
text = "--:--:--"
align = 1

[node name="Cancel" type="Button" parent="Counting"]
margin_left = 192.0
margin_top = 192.0
margin_right = 321.0
margin_bottom = 240.0
custom_colors/font_color_disabled = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_colors/font_color_focus = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_fonts/font = SubResource( 2 )
text = "Cancel"

[node name="SetTime" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="SetTime"]
margin_left = 128.0
margin_top = 144.0
margin_right = 384.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "Enter Time"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="MTT" to="." method="_on_MTT_pressed"]
[connection signal="pressed" from="Counting/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
